test/error/forgprep3.luau
local it = 69

for i, v in ipairs(it) do
	print(i, v)
end
